--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user1.snakesandladdersplus" >
 
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-
 
     <application
         android:allowBackup="true"
@@ -21,12 +18,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".Login">
+        </activity>
+        <activity
+            android:name=".ScoreboardAndSighup">
+        </activity>
+        <activity
             android:name=".GameActivity"
             android:screenOrientation="landscape"
             android:configChanges="orientation|keyboardHidden">
-        </activity>
-        <activity android:name=".Login">
-
         </activity>
     </application>
 
